--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "build:prod": "npx nuxi build",
+    "deploy:prod": "npx wrapper pages deploy dist/"
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.1",
