--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "deploy:prod": "npx wrangler pages deploy dist/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@primeuix/themes": "^1.2.1",
     "@primevue/forms": "^4.3.6",
     "@tailwindcss/vite": "^4.1.11",
+    "@vue-hero-icons/outline": "^1.7.2",
     "firebase": "^11.10.0",
     "nuxt": "^3.17.6",
     "primevue": "^4.3.6",
