--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "build:prod": "npx nuxi build",
+    "build:prod": "npx nuxi build --preset=cloudflare_pages",
     "deploy:prod": "npx wrangler pages deploy dist/"
   },
   "dependencies": {
