--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@primevue/forms": "^4.3.6",
     "@tailwindcss/vite": "^4.1.11",
     "@vue-hero-icons/outline": "^1.7.2",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "nuxt": "^3.17.6",
     "primevue": "^4.3.6",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
